Now serving static files with express / finished IE js compatibility

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "live-server --browser=Chrome",
-    "server": "nodemon ./api/app.js"
+    "server": "nodemon ./api/app.js",
+    "start": "live-server --browser=Chrome --cors --open=/public"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,6 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
     "express": "^4.17.1",
     "normalize.css": "^8.0.1"
   }
